# Dating-App-Backend

./: .gitignore  Cargo.toml  README.md  databaseCreation.sql  db.db  love.db  love.db-shm  love.db-wal
.github/: rust.yml
.github/workflows/: rust.yml
backend/: Cargo.toml  hehe  love.db
backend/src/: auth.rs  main.rs
backend/src/constants/: constants.rs
backend/src/data_access_layer/: mod.rs  user.rs  user_dal.rs  users.rs
backend/src/my_errors/: mod.rs  service_errors.rs  sqlite_errors.rs
backend/src/service_layer/: auth.rs  auth_service.rs  mod.rs  photos_service.rs  user_service.rs  users.rs
databaseDriller/: Cargo.toml
databaseDriller/src/: main.rs
frontend/: package-lock.json
frontend/src/: App.js  Dashboard.js  ImageUploader.js  Login.js  index.js
frontend/src/style/: dashboard.css  login.css
src/: main.rs
src/clients/: aws.rs
src/configs/: app_state.rs  config.rs  dev.toml  prod.toml
src/constants/: constants.rs
src/data_access_layer/: feedback_dal.rs  lover_dal.rs  message_dal.rs  mod.rs  photo_dal.rs  trace_dal.rs  user_dal.rs
src/my_errors/: mod.rs  service_errors.rs  sqlite_errors.rs
src/requests/: requests.rs
src/responses/: responses.rs
src/service_layer/: auth_service.rs  feedback_service.rs  lover_service.rs  message_service.rs  mod.rs  photos_service.rs  sse_service.rs  statistics_service.rs  trace_service.rs  user_service.rs  websocket_service.rs  websocket_service_complex.rs
src/utilities/: responses.rs
