[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8"
failure = "0.1.7"
"jsonwebtoken" = "7.2.0"
argon2 = "0.3.1"
rand_core = { version = "0.6", features = ["std"] }
hex-literal = "0.3"
rand = "0.8"
chrono = "0.4"

# The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde. The "derive" feature is only required when
# using #[derive(Serialize, Deserialize)] to make Serde work with structs
# and enums defined in your crate.
serde = { version = "1.0.155", features = ["derive"] }
# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"

sanitize-filename = "0.2"
uuid = { version = "1.3.1", features = ["v7"] }
futures-util = "0.3"
futures = "0.3.4"
axum = { version = "0.6.14", features = ["headers"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
rusqlite = "0.28.0"
async-stream = "0.3.4"
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs", "trace", "cors"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"

