[package]
name = "databaseDriller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "cookies"] }
tokio = { version = "1.15", features = ["full", "tracing"] }
serde = { version = "1.0", features = ["derive"] }
tokio-stream = "0.1"
futures = "0.3"
rand = "0.8"
rayon = "1.5"
console-subscriber = "0.1.0"